--- a/Index.html
+++ b/Index.html
@@ -49,9 +49,9 @@
     </div>
 
 
-    <script src="bootstrap/jquery3.4.1.js"></script>
-    <script src="bootstrap/bootstrap/js/bootstrap.min.js"></script>
-    <script src="form.js"></script>
+    <script src="./bootstrap/jquery3.4.1.js"></script>
+    <script src="./bootstrap/bootstrap/js/bootstrap.min.js"></script>
+    <script src="./form.js"></script>
 </body>
 
 </html>
